Notify paint for each frame

Currently main frame reports paint timing and subframes report paint
timing via main frame. The desired behavior is that each frame reports
its own paint timing.

BUG=705315
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2872793002
Cr-Commit-Position: refs/heads/master@{#471922}

Former-commit-id: 5c0563522bdf7cb4c56420cd7d39c0139b5f8f1a